# mujocoCartpole

./: .gitignore  CMakeLists.txt  README.md
data/: .~lock.log.csv#
include/: LQR.h  controller.h  mujoco_interface.h  socket.h  utilities.h
rsc/: MJDATA.TXT  MJMODEL.TXT  controller_setup.yaml  sim_setup.yaml
src/: LQR.cpp  controller.cpp  mujoco_interface.cpp  sim.cpp  socket.cpp  utilities.cpp
test/: test_socket_client.cpp  test_socket_server.cpp
